# wealth_manager

./: .env.development  .env.production  .gitignore  .gitmodules  DATABASE_STRUCTURE.md  LICENSE  README.md  category&subcategory.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.staging.yml  docker-compose.yml  import_from_firefly.py  ruff.toml  tsconfig.json
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  app.py  database_directory  pyproject.toml  requirements.txt  run.py  setup_demo_cron.sh
backend/app/: __init__.py  category.py  database.py  exceptions.py  logger.py  middleware.py  models.py  schemas.py  swagger.py  test_db.py  utils.py  wealthmanager.db.old
backend/app/routes/: account_asset_routes.py  account_routes.py  asset_routes.py  bank_routes.py  base_routes.py  budget_routes.py  gocardless_routes.py  investment_routes.py  liability_routes.py  refund_group.py  refund_group_routes.py  refund_item.py  refund_item_routes.py  route_utils.py  stock_routes.py  transaction_routes.py  user_routes.py
backend/app/schemas/: __init__.py  schema_registry.py
backend/app/services/: account_asset_service.py  account_service.py  asset_service.py  bank_service.py  base_service.py  budget_service.py  custom_price_service.py  gocardless_service.py  investment_service.py  liability_service.py  refund_group_service.py  refund_item.py  (+3 more)
backend/instance/: wealth_manager.db
backend/migrations/: add_date_accountability.py
backend/test/: add_api_fake_data.py  test_api.py
(+269 files in other folders)
